--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -55,3 +55,14 @@
     position: relative;
     margin:auto 40px;
 }
+.back{
+    background-color: #000;
+    color: white;
+}
+
+.transaction{
+    position: relative;
+    text-align: center;
+    background-color: #000;
+    color: white;
+}
